// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontIcon should apply the correct classNames 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--font material-icons"
  data-testid="icon"
/>
`;

exports[`FontIcon should apply the correct classNames 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--font rmd-icon--dense material-icons test-thing"
  data-testid="icon"
/>
`;

exports[`FontIcon should apply the correct classNames 3`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--font rmd-icon--dense fa fa-github test-thing"
  data-testid="icon"
/>
`;

exports[`FontIcon should render correctly 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--font material-icons"
  data-testid="icon"
>
  home
</span>
`;
